tests/rosetta/transpiler/Scala/abbreviations-automatic.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-automatic.scala:45: error: type mismatch;
 found   : Any
 required: String
      if (!m.contains(x)) {
                      ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-automatic.scala:46: error: type mismatch;
 found   : Any
 required: String
        m(x) = true
          ^
/workspace/mochi/tests/rosetta/transpiler/Scala/abbreviations-automatic.scala:47: error: type mismatch;
 found   : scala.collection.mutable.ArrayBuffer[Any]
 required: scala.collection.mutable.ArrayBuffer[String]
Note: Any >: String, but class ArrayBuffer is invariant in type A.
You may wish to investigate a wildcard type such as `_ >: String`. (SLS 3.2.10)
        out = out :+ x
                  ^
three errors found
